--- a/index.html
+++ b/index.html
@@ -12,35 +12,106 @@
   <style>
     /* Reset */
     * { margin:0; padding:0; box-sizing:border-box; }
-    html, body { width:100%; height:100%; overflow:auto; background:#000; font-family:'Press Start 2P',monospace; position:relative; cursor:auto; }
+    html, body {
+      width: 100%;
+      height: auto;
+      overflow-x: hidden;
+      overflow-y: auto;
+      background: #000;
+      font-family: 'Press Start 2P', monospace;
+      position: relative;
+      cursor: auto;
+    }
     /* Full-cover background */
-    .bg { position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(135deg,#2b0a3d,#7f0a9e 50%,#ff79c6); background-size:cover; z-index:1; }
+    .bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      /* Grid overlay + gradient */
+      background-image:
+        repeating-linear-gradient(0deg, rgba(255,255,255,0.1) 0 1px, transparent 1px 20px),
+        repeating-linear-gradient(90deg, rgba(255,255,255,0.1) 0 1px, transparent 1px 20px),
+        linear-gradient(135deg, #2b0a3d, #7f0a9e 50%, #ff79c6);
+      background-size: 20px 20px, 20px 20px, cover;
+      animation: gridMove 12s linear infinite;
+      z-index: 1;
+    }
     /* Neon lines */
-    .neon { position:absolute; top:-50%; left:-50%; width:200%; height:200%; background:repeating-linear-gradient(45deg,rgba(0,255,255,0.15)0,transparent20px),repeating-linear-gradient(-45deg,rgba(255,0,255,0.15)0,transparent20px); animation:neonFlicker 3s infinite; z-index:2; }
+    .neon {
+      position:fixed; top:-50%; left:-50%;
+      width:200%; height:200%;
+      background: repeating-linear-gradient(45deg,rgba(0,255,255,0.15)0,transparent20px),
+                  repeating-linear-gradient(-45deg,rgba(255,0,255,0.15)0,transparent20px);
+      animation:neonFlicker 3s infinite; z-index:2;
+    }
     @keyframes neonFlicker {0%,100%{opacity:.4;}50%{opacity:.1;}}
     /* Twinkle background stars */
-    .twinkle { position:absolute; background:#fff; border-radius:50%; opacity:0; animation:twinkleAnim 2s ease-in-out infinite; }
-    @keyframes twinkleAnim { 0%,100%{opacity:0;}50%{opacity:0.8;} }
-    /* Floating stars */
-    .floating-star { position:absolute; font-size:4vw; opacity:0; animation:starRise 4s linear forwards, starColor 2s linear infinite; z-index:3; }
-    @keyframes starRise {0%{transform:translateY(100vh) scale(.5);opacity:1;}100%{transform:translateY(-10vh) scale(1);opacity:0;}}
+    .twinkle { position:absolute; background:#fff; border-radius:50%; opacity:0;
+      animation:twinkleAnim 2s ease-in-out infinite; z-index:3;
+    }
+    @keyframes twinkleAnim {0%,100%{opacity:0;}50%{opacity:.8;}}
+    /* Floating stars inside window */
+    .floating-star {
+      position: absolute;
+      font-size: 4vw;
+      opacity: 0;
+      animation: starRise 8s linear forwards, starColor 4s linear infinite;
+      /* rainbow coloring via starColor animation */
+      z-index: 5;
+    }
+    @keyframes starRise {
+      0% { transform: translateY(0); opacity:1; }
+      100% { transform: translateY(-90vh); opacity:0; }
+    }100%{transform:translateY(-20%);opacity:0;}}
     @keyframes starColor {0%{color:red;}16%{color:orange;}32%{color:yellow;}48%{color:green;}64%{color:blue;}80%{color:indigo;}100%{color:violet;}}
     /* XP Window */
-    .window { position:relative; z-index:4; width:90vw; max-width:600px; margin:40px auto; background:#c0c0c0; border:2px solid #fff; box-shadow:1px 1px 0 #000,-1px -1px 0 #808080; overflow:hidden; }
-    .title-bar { display:flex; justify-content:space-between; align-items:center; padding:4px 8px; background:linear-gradient(to right,#000080,#0000cd); color:#fff; border-bottom:2px solid #fff; }
+    .window {
+      position: relative;
+      z-index: 4;
+      width: 90vw;
+      max-width: 600px;
+      margin: 40px auto;
+      background: #c0c0c0;
+      border: 2px solid #fff;
+      box-shadow: 1px 1px 0 #000, -1px -1px 0 #808080;
+      /* internal scroll removed per request */
+    }
+    .title-bar { display:flex; justify-content:space-between; align-items:center;
+      padding:4px 8px; background:linear-gradient(to right,#000080,#0000cd);
+      color:#fff; border-bottom:2px solid #fff;
+    }
     .buttons { display:flex; gap:4px; }
-    .btn-xp { width:4vw; max-width:16px; height:4vw; max-height:16px; background:#ff5c5c; border:1px solid #fff; cursor:pointer; }
+    .btn-xp { width:4vw; max-width:16px; height:4vw; max-height:16px;
+      background:#ff5c5c; border:1px solid #fff; cursor:pointer;
+    }
     .content { padding:4vw; background:#008080; border-top:2px solid #fff; text-align:center; }
     /* Neon flicker text */
-    .neon-text { font-size:5vw; max-font-size:1.5rem; color:#ff79c6; text-shadow:0 0 5px #ff79c6,0 0 20px #ff79c6; animation:textFlicker 1.5s infinite; }
+    .neon-text { font-size:5vw; max-font-size:1.5rem; color:#ff79c6;
+      text-shadow:0 0 5px #ff79c6,0 0 20px #ff79c6; animation:textFlicker 1.5s infinite;
+    }
     @keyframes textFlicker {0%,100%{opacity:1;}50%{opacity:.5;text-shadow:0 0 10px #00ffff;}}
     h1 { margin-bottom:1vw; }
-    p { font-size:3vw; max-font-size:.75rem; color:#00ffff; text-shadow:0 0 5px #00ffff; margin:1vw 0 .5vw; }
-    #player { width:100%; aspect-ratio:16/9; border:2px solid #00ffff; border-radius:1vw; margin:.5vw 0; }
-    .control-btn { margin:2vw 1vw; padding:2vw 4vw; font-size:2vw; max-font-size:.6rem; background:#ff79c6; border:2px solid #00ffff; border-radius:4vw; color:#000; cursor:pointer; transition:.2s; }
+    p { font-size:3vw; max-font-size:.75rem; color:#00ffff;
+      text-shadow:0 0 5px #00ffff; margin:1vw 0 .5vw;
+    }
+    #player { width:100%; aspect-ratio:16/9;
+      border:2px solid #00ffff; border-radius:1vw; margin:.5vw 0;
+    }
+    .control-btn { margin:2vw 1vw; padding:2vw 4vw; font-size:2vw; max-font-size:.6rem;
+      background:#ff79c6; border:2px solid #00ffff; border-radius:4vw;
+      color:#000; cursor:pointer; transition:.2s;
+    }
     .control-btn:hover { background:#00ffff; transform:scale(1.1); color:#121212; }
     /* Chat */
-    #chat { height:25vh; max-height:200px; overflow-y:auto; background:rgba(0,0,0,.7); margin:2vw 0; padding:2vw; font-family:'Press Start 2P',monospace; font-size:5vw; max-font-size:1rem; color:#fff; border:2px solid #00ffff; }
+    #chat { height:25vh; max-height:200px; overflow-y:auto;
+      background:rgba(0,0,0,.7); margin:2vw 0; padding:2vw;
+      font-family:'Press Start 2P',monospace; font-size:5vw; max-font-size:1rem;
+      color:#fff; border:2px solid #00ffff;
+      animation: rainbowText 5s linear infinite;
+    }
+    @keyframes rainbowText {0%{color:red;}16%{color:orange;}32%{color:yellow;}48%{color:green;}64%{color:blue;}80%{color:indigo;}100%{color:violet;}}
     #chat-input { width:65%; padding:2vw; font-size:5vw; max-font-size:1rem; margin:1vw 1vw; }
     #send-btn { padding:2vw 4vw; font-size:5vw; max-font-size:1rem; }
     .fallback { font-size:3vw; max-font-size:.75rem; color:#ff79c6; margin-top:1vw; }
@@ -51,27 +122,6 @@
 <body>
   <div class="bg"></div>
   <div class="neon"></div>
-  <!-- Twinkle Background Stars -->
-  <script>
-    setInterval(() => {
-      const t = document.createElement('div');
-      t.className = 'twinkle';
-      const size = Math.random()*3 + 1;
-      t.style.width = size + 'px'; t.style.height = size + 'px';
-      t.style.left = Math.random()*100 + '%'; t.style.top = Math.random()*100 + '%';
-      document.body.appendChild(t);
-      // remove after animation cycle
-      setTimeout(() => t.remove(), 2000);
-    }, 200);
-    // Floating Stars
-    setInterval(() => {
-      const s = document.createElement('div');
-      s.className = 'floating-star'; s.innerText = '★';
-      s.style.left = Math.random()*90 + '%';
-      document.body.appendChild(s);
-      s.addEventListener('animationend', () => s.remove());
-    }, 200);
-  </script>
   <div class="window">
     <div class="title-bar"><span>Vaporwave Player</span><div class="buttons"><div class="btn-xp"></div><div class="btn-xp"></div><div class="btn-xp"></div></div></div>
     <div class="content">
@@ -85,23 +135,36 @@
       <p class="fallback">埋め込みがブロックされた場合は <a href="https://www.youtube.com/watch?v=WI4-HUn8dFc&list=PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk" target="_blank">こちら</a> をクリック</p>
     </div>
   </div>
+  <!-- Twinkle and Floating Stars -->
   <script>
-    const ytTag = document.createElement('script'); ytTag.src = 'https://www.youtube.com/iframe_api'; document.head.appendChild(ytTag);
-    let player;
-    function onYouTubeIframeAPIReady() {
-      player = new YT.Player('player', { playerVars: { listType:'playlist', list:'PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk', autoplay:0, controls:0, loop:1, modestbranding:1, origin:location.origin } });
-    }
     document.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('play').onclick = () => { const s = player.getPlayerState(); s === YT.PlayerState.PLAYING ? player.pauseVideo() : player.playVideo(); };
-      document.getElementById('prev').onclick = () => player.previousVideo();
-      document.getElementById('next').onclick = () => player.nextVideo();
-      // Firebase init
-      const config = { apiKey:"AIzaSyCcNEZGmBSH3U_RlvmAOXYFHbW7dzzbFDE", authDomain:"vapor-71b36.firebaseapp.com", databaseURL:"https://vapor-71b36-default-rtdb.firebaseio.com", projectId:"vapor-71b36", storageBucket:"vapor-71b36.appspot.com", messagingSenderId:"344956365850", appId:"1:344956365850:web:51ca717cc8dda9838bb5a3" };
-      firebase.initializeApp(config);
-      const db = firebase.database().ref('chat');
-      db.on('child_added', snap => { const m = snap.val(); const d = document.createElement('div'); d.textContent = m; document.getElementById('chat').appendChild(d); document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight; });
-      document.getElementById('send-btn').onclick = () => { const v = document.getElementById('chat-input').value; if (v) { db.push(v); document.getElementById('chat-input').value = ''; } };
+      const win = document.querySelector('.window');
+      const chatBox = document.getElementById('chat');
+      // Twinkle background stars (fixed)
+      setInterval(() => {
+        const t = document.createElement('div');
+        t.className = 'twinkle';
+        const size = Math.random() * 4 + 2;
+        t.style.width = size + 'px'; t.style.height = size + 'px';
+        t.style.left = Math.random() * 100 + '%'; t.style.top = Math.random() * 100 + '%';
+        document.body.appendChild(t);
+        setTimeout(() => t.remove(), 2500);
+      }, 150);
+      // Floating stars inside chat window
+      setInterval(() => {
+        const s = document.createElement('div');
+        s.className = 'floating-star';
+        s.innerText = '★';
+        const rect = chatBox.getBoundingClientRect();
+        const x = Math.random() * (rect.width - 24);
+        s.style.position = 'absolute';
+        s.style.left = x + 'px';
+        s.style.top = rect.height + 'px';
+        // Randomize individual rainbow animation start for color cycling
+        const colorDelay = (Math.random() * 4) + 's';
+        s.style.animation = `starRise 8s linear forwards, starColor 4s linear infinite ${colorDelay}`;
+        chatBox.appendChild(s);
+        s.addEventListener('animationend', () => s.remove());
+      }, 250);
     });
   </script>
-</body>
-</html>
