--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Vaporwave Synthwave Site with Chat & Game</title>
-  <!-- Pixel Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
-  <!-- Firebase SDK -->
+  <title>Vaporwave Synthwave Site with Chat & Game</title>
+
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+
+  <!-- Pixel Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
+  <!-- Custom Font -->
   <style>
+    @font-face {
+      font-family: '모리스체-heroine762';
+      src: url('fonts/모리스체-heroine762.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
     * { margin:0; padding:0; box-sizing:border-box; }
     html, body {
-      width: 100%;
-      /* allow content to define height */
-      height: auto;
-      min-height: 100vh;
-      overflow-x: hidden;
-      overflow-y: auto;
-      background: #000;
-      font-family: 'Press Start 2P', monospace;
-      position: relative;
+      width:100%; min-height:100vh; overflow-x:hidden; overflow-y:auto;
+      background:#000; font-family:'Press Start 2P',monospace;
+      position:relative;
     }
-    /* Grid background */
     .bg {
       position:fixed; top:0; left:0; width:100%; height:100%;
       background-image:
         repeating-linear-gradient(0deg, rgba(255,255,255,0.1) 0 1px, transparent 1px 20px),
         repeating-linear-gradient(90deg, rgba(255,255,255,0.1) 0 1px, transparent 1px 20px),
         linear-gradient(135deg,#2b0a3d,#7f0a9e 50%,#ff79c6);
-      background-size:20px 20px,20px 20px, cover;
+      background-size:20px 20px,20px 20px,cover;
       animation:gridMove 12s linear infinite; z-index:1;
     }
     @keyframes gridMove {0%{background-position:0 0;}100%{background-position:100% 100%;}}
@@ -51,10 +53,8 @@
     @keyframes starRise {0%{transform:translateY(0);opacity:1;}100%{transform:translateY(-90vh);opacity:0;}}
     @keyframes starColor {0%{color:red;}16%{color:orange;}32%{color:yellow;}48%{color:green;}64%{color:blue;}80%{color:indigo;}100%{color:violet;}}
     .window {
-      position:relative; z-index:4;
-      width:90vw; max-width:600px; margin:40px auto;
-      background:#c0c0c0; border:2px solid #fff;
-      box-shadow:1px 1px 0 #000,-1px -1px 0 #808080;
+      position:relative; z-index:4; width:90vw; max-width:600px; margin:40px auto;
+      background:#c0c0c0; border:2px solid #fff; box-shadow:1px 1px 0 #000,-1px -1px 0 #808080;
       overflow:hidden;
     }
     .title-bar { display:flex; justify-content:space-between; align-items:center;
@@ -71,12 +71,13 @@
     p { font-size:.75rem; color:#00ffff; text-shadow:0 0 5px #00ffff; margin:.5rem 0; }
     #player { width:100%; height:315px; border:2px solid #00ffff; border-radius:4px; margin:.5rem 0; }
     .control-btn { margin:.5rem .5rem; padding:.6rem 1.2rem; font-size:.6rem;
-      background:#ff79c6; border:2px solid #00ffff; border-radius:6px; cursor:pointer;
-      transition:.2s;
+      background:#ff79c6; border:2px solid #00ffff; border-radius:6px; cursor:pointer; transition:.2s;
     }
     .control-btn:hover { background:#00ffff; transform:scale(1.1); color:#121212; }
-    #chat { height:150px; overflow-y:auto; background:rgba(0,0,0,.7);
-      margin:1rem 0; padding:1rem; font-family:'모리스체-heroine762','Press Start 2P',monospace;
+    #chat {
+      height:150px; overflow-y:auto; background:rgba(0,0,0,.7);
+      margin:1rem 0; padding:1rem;
+      font-family:'모리스체-heroine762','Press Start 2P',monospace;
       font-size:1rem; color:#fff; border:2px solid #00ffff;
       animation:rainbowText 5s linear infinite;
     }
@@ -103,20 +104,18 @@
       <div class="neon-text">Retro Music On XP</div>
       <p>涼しげなネオンとグリッチの幻想をお楽しみください</p>
       <div id="player"></div>
-      <div><button class="control-btn" id="prev">◀︎ Prev</button><button class="control-btn" id="play">Play</button><button class="control-btn" id="next">Next ▶︎</button></div>
-      <div id="chat"></div>
-      <input id="chat-input" type="text" placeholder="チャット를 입력..." />
-      <button id="send-btn" class="control-btn">送信</button>
-      <!-- Search song -->
-      <div style="margin-top:1rem;">
-        <input id="search-input" type="text" placeholder="Search song..." style="padding:.6rem; font-size:.6rem; width:60%;" />
-        <button id="search-btn" class="control-btn">검색</button>
+      <div>
+        <button class="control-btn" id="prev">◀︎ Prev</button>
+        <button class="control-btn" id="play">Play</button>
+        <button class="control-btn" id="next">Next ▶︎</button>
       </div>
+      <div id="chat"></div>
+      <input id="chat-input" type="text" placeholder="채팅을 입력..." />
+      <button id="send-btn" class="control-btn">送信</button>
       <p class="fallback">埋め込みがブロックされた場合は <a href="https://www.youtube.com/watch?v=WI4-HUn8dFc&list=PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk" target="_blank">こちら</a> をクリック</p>
-      <!-- Mini Game: Catch the Star -->
       <div id="game-container">
-        <h2 style="font-size:1rem;color:#ff79c6;">⭐ Catch the Star Game ⭐</h2>
-        <p style="font-size:.75rem;color:#00ffff;">Click the moving star as many times as you can!</p>
+        <h2 style="font-size:1rem; color:#ff79c6;">⭐ Catch the Star Game ⭐</h2>
+        <p style="font-size:.75rem; color:#00ffff;">Click the moving star as many times as you can!</p>
         <canvas id="gameCanvas" width="300" height="200"></canvas>
         <p id="gameScore">Score: 0</p>
       </div>
@@ -127,66 +126,44 @@
       const chatBox = document.getElementById('chat');
       // Twinkle stars
       setInterval(() => {
-        const t = document.createElement('div'); t.className='twinkle';
-        const sz=Math.random()*4+2; t.style.width=sz+'px'; t.style.height=sz+'px';
-        t.style.left=Math.random()*100+'%'; t.style.top=Math.random()*100+'%';
-        document.body.appendChild(t); setTimeout(()=>t.remove(),2500);
-      },150);
+        const t = document.createElement('div'); t.className = 'twinkle';
+        const sz = Math.random() * 4 + 2; t.style.width = sz + 'px'; t.style.height = sz + 'px';
+        t.style.left = Math.random() * 100 + '%'; t.style.top = Math.random() * 100 + '%';
+        document.body.appendChild(t); setTimeout(() => t.remove(), 2500);
+      }, 150);
       // Floating stars in chat
       setInterval(() => {
-        const s=document.createElement('div'); s.className='floating-star'; s.innerText='★';
-        const rect=chatBox.getBoundingClientRect();
-        s.style.left=Math.random()*(rect.width-24)+'px'; s.style.top=rect.height+'px';
-        s.style.animationDelay=(Math.random()*4)+'s';
-        chatBox.appendChild(s); s.addEventListener('animationend',()=>s.remove());
-      },250);
+        const s = document.createElement('div'); s.className = 'floating-star'; s.innerText = '★';
+        const rect = chatBox.getBoundingClientRect();
+        s.style.left = Math.random() * (rect.width - 24) + 'px';
+        s.style.top = rect.height + 'px';
+        s.style.animationDelay = (Math.random() * 4) + 's';
+        chatBox.appendChild(s); s.addEventListener('animationend', () => s.remove());
+      }, 250);
       // Firebase init and chat
-      const config={apiKey:"AIzaSyCcNEZGmBSH3U_RlvmAOXYFHbW7dzzbFDE",authDomain:"vapor-71b36.firebaseapp.com",databaseURL:"https://vapor-71b36-default-rtdb.firebaseio.com/",projectId:"vapor-71b36",storageBucket:"vapor-71b36.appspot.com",messagingSenderId:"344956365850",appId:"1:344956365850:web:51ca717cc8dda9838bb5a3"};
+      const config = {apiKey:"AIzaSyCcNEZGmBSH3U_RlvmAOXYFHbW7dzzbFDE",authDomain:"vapor-71b36.firebaseapp.com",databaseURL:"https://vapor-71b36-default-rtdb.firebaseio.com/",projectId:"vapor-71b36",storageBucket:"vapor-71b36.appspot.com",messagingSenderId:"344956365850",appId:"1:344956365850:web:51ca717cc8dda9838bb5a3"};
       firebase.initializeApp(config);
-      const db=firebase.database().ref('chat');
-      db.on('child_added',snap=>{const m=snap.val();const d=document.createElement('div');d.textContent=m;chatBox.appendChild(d);chatBox.scrollTop=chatBox.scrollHeight;});
-      document.getElementById('send-btn').addEventListener('click',()=>{
-        const v=document.getElementById('chat-input').value.trim();if(v){db.push(v);}document.getElementById('chat-input').value='';
-      });
-      document.getElementById('chat-input').addEventListener('keydown', e=>{ if(e.key==='Enter') document.getElementById('send-btn').click(); });
-      // YouTube IFrame API load
-      const ytTag=document.createElement('script'); ytTag.src='https://www.youtube.com/iframe_api'; document.head.appendChild(ytTag);
+      const db = firebase.database().ref('chat');
+      db.on('child_added', snap => { const m = snap.val(); const d = document.createElement('div'); d.textContent = m; chatBox.appendChild(d); chatBox.scrollTop = chatBox.scrollHeight; });
+      document.getElementById('send-btn').addEventListener('click', () => { const v = document.getElementById('chat-input').value.trim(); if (v) db.push(v); document.getElementById('chat-input').value = ''; });
+      document.getElementById('chat-input').addEventListener('keydown', e => { if (e.key === 'Enter') document.getElementById('send-btn').click(); });
+      // Load YouTube IFrame API
+      const ytTag = document.createElement('script'); ytTag.src = 'https://www.youtube.com/iframe_api'; document.head.appendChild(ytTag);
     });
-    // YouTube player and controls
     let player;
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('player', {
-        playerVars: {
-          listType: 'playlist',
-          list: 'PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk',
-          autoplay: 1,
-          controls: 0,
-          loop: 1,
-          modestbranding: 1,
-          origin: location.origin
-        },
-        events: {
-          onReady: function() {
-            player.setVolume(100); // 최대 음량 설정
-            player.playVideo();
-            document.getElementById('play').onclick = function() {
-              const state = player.getPlayerState();
-              if (state === YT.PlayerState.PLAYING) player.pauseVideo();
-              else player.playVideo();
-            };
-            document.getElementById('prev').onclick = function() { player.previousVideo(); };
-            document.getElementById('next').onclick = function() { player.nextVideo(); };
-          }
-        }
+        playerVars: { listType:'playlist', list:'PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk', autoplay:1, controls:0, loop:1, modestbranding:1, origin:location.origin },
+        events: { onReady: function() { player.setVolume(100); player.playVideo(); document.getElementById('play').onclick = () => { const s = player.getPlayerState(); s===YT.PlayerState.PLAYING?player.pauseVideo():player.playVideo(); }; document.getElementById('prev').onclick = () => player.previousVideo(); document.getElementById('next').onclick = () => player.nextVideo(); } }
       });
     }
     // Mini Game logic
-    document.addEventListener('DOMContentLoaded',()=>{
-      const canvas=document.getElementById('gameCanvas');const ctx=canvas.getContext('2d');const scoreDisplay=document.getElementById('gameScore');let score=0;let star={x:0,y:0,r:10};
-      function drawStar(){ctx.clearRect(0,0,canvas.width,canvas.height);ctx.fillStyle='#ff79c6';ctx.beginPath();ctx.moveTo(star.x,star.y-star.r);for(let i=1;i<5;i++){const angle=i*(Math.PI*2)/5-Math.PI/2;ctx.lineTo(star.x+Math.cos(angle)*star.r,star.y+Math.sin(angle)*star.r);}ctx.closePath();ctx.fill();}
-      function placeStar(){star.x=Math.random()*(canvas.width-2*star.r)+star.r;star.y=Math.random()*(canvas.height-2*star.r)+star.r;drawStar();}
-      canvas.addEventListener('click',e=>{const rect=canvas.getBoundingClientRect();const mx=e.clientX-rect.left,my=e.clientY-rect.top;const dx=mx-star.x,dy=my-star.y;if(Math.sqrt(dx*dx+dy*dy)<star.r){score++;scoreDisplay.textContent='Score: '+score;placeStar();}});
-      placeStar();setInterval(placeStar,2000);
+    document.addEventListener('DOMContentLoaded', () => {
+      const canvas = document.getElementById('gameCanvas'); const ctx = canvas.getContext('2d'); const scoreDisplay = document.getElementById('gameScore'); let score = 0; let star = { x:0, y:0, r:10 };
+      function drawStar() { ctx.clearRect(0,0,canvas.width,canvas.height); ctx.fillStyle='#ff79c6'; ctx.beginPath(); ctx.moveTo(star.x, star.y-star.r); for (let i=1;i<5;i++){ const angle=i*(Math.PI*2)/5-Math.PI/2; ctx.lineTo(star.x+Math.cos(angle)*star.r, star.y+Math.sin(angle)*star.r);} ctx.closePath(); ctx.fill(); }
+      function placeStar(){ star.x=Math.random()*(canvas.width-2*star.r)+star.r; star.y=Math.random()*(canvas.height-2*star.r)+star.r; drawStar(); }
+      canvas.addEventListener('click', e=>{ const rect=canvas.getBoundingClientRect(); const mx=e.clientX-rect.left, my=e.clientY-rect.top; const dx=mx-star.x, dy=my-star.y; if(Math.sqrt(dx*dx+dy*dy)<star.r){ score++; scoreDisplay.textContent='Score: '+score; placeStar(); }});
+      placeStar(); setInterval(placeStar,2000);
     });
   </script>
 </body>
