--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
         <button class="control-btn" id="vol-up">Vol +</button>
       </div>
       <div id="chat"></div>
+      <!-- Online Users Count -->
+      <p id="online-count" style="font-size:.75rem; color:#00ffff; margin-top: .5rem;">접속 중인 사용자: 0명</p>
       <input id="chat-input" type="text" placeholder="채팅을 입력..." />
       <button id="send-btn" class="control-btn">送信</button>
       <p class="fallback">埋め込みがブロックされた場合は <a href="https://www.youtube.com/watch?v=WI4-HUn8dFc&list=PLGa3uxog5E0tb8WmX0STOZRgLZAZX-rAk" target="_blank">こちら</a> をクリック</p>
