--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
         <button class="control-btn" id="prev">◀︎ Prev</button>
         <button class="control-btn" id="play">Play</button>
         <button class="control-btn" id="next">Next ▶︎</button>
+      </div>
+      <div style="margin-top: .5rem;">
         <button class="control-btn" id="vol-down">Vol -</button>
         <button class="control-btn" id="vol-up">Vol +</button>
       </div>
