--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="buttons"><div class="btn-xp"></div><div class="btn-xp"></div><div class="btn-xp"></div></div>
     </div>
     <div class="content">
-      <div class="neon-text">Retro Music On XP</div>
+      <div class="neon-text">For the Horde</div>
       <p>涼しげなネオンとグリッチの幻想をお楽しみください</p>
       <div id="player"></div>
       <div>
